--- a/Apq/Apq.Win/Apq.Win.csproj
+++ b/Apq/Apq.Win/Apq.Win.csproj
@@ -143,32 +143,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Dlls\Apq.WorkFlow.dll</HintPath>
     </Reference>
-    <Reference Include="DevExpress.Data.v9.2, Version=9.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="DevExpress.Utils.v9.2, Version=9.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="DevExpress.XtraBars.v9.2, Version=9.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.XtraEditors.v9.2, Version=9.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="DevExpress.XtraGrid.v9.2, Version=9.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="DevExpress.XtraLayout.v9.2, Version=9.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="DevExpress.XtraTreeList.v9.2, Version=9.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
-      <Private>False</Private>
+    <Reference Include="CommonTools, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dlls\CommonTools.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.TextEditor, Version=2.0.0.922, Culture=neutral, PublicKeyToken=4d61825e8dd49f1a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Reference\ICSharpCode\TextEditor_2.2\ICSharpCode.TextEditor.dll</HintPath>
+      <HintPath>Dlls\ICSharpCode.TextEditor.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Reference\log4net-1.2.10\log4net.dll</HintPath>
+      <HintPath>Dlls\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -184,17 +169,14 @@
     <Reference Include="System.Xml" />
     <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=2.2.2864.18696, Culture=neutral, PublicKeyToken=d481317c817cec47, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Reference\DockPanel\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
+      <HintPath>Dlls\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppSettingsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AppSettingsForm.Designer.cs">
-      <DependentUpon>AppSettingsForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Apq.Win\GlobalObject.cs" />
+    <Compile Include="KODY.WindowsUI\DataTreeView.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Diagnostics\Process.cs" />
     <Compile Include="ICSharp\Common.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -207,64 +189,17 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\DTSColumnMappings.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\DTSColumnMappings.Designer.cs">
-      <DependentUpon>DTSColumnMappings.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\FromDataSet.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\FromDataSet.Designer.cs">
-      <DependentUpon>FromDataSet.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\Direction.cs" />
-    <Compile Include="Windows\Controls\DataSetDTS\ToExcel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\ToExcel.Designer.cs">
-      <DependentUpon>ToExcel.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\ToText.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\ToText.Designer.cs">
-      <DependentUpon>ToText.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\DTSSelectOut.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\DTSSelectOut.Designer.cs">
-      <DependentUpon>DTSSelectOut.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\DTSRoot.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Windows\Controls\DataSetDTS\DTSRoot.Designer.cs">
-      <DependentUpon>DTSRoot.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\Controls\Grid\DataSetEditor.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Windows\Controls\Grid\DataSetEditor.Designer.cs">
-      <DependentUpon>DataSetEditor.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\Controls\SaveFile.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Windows\Controls\SaveFile.Designer.cs">
-      <DependentUpon>SaveFile.cs</DependentUpon>
+    <Compile Include="KODY.WindowsUI\TreeViewAdv.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Windows\Controls\ControlExtension.cs" />
+    <Compile Include="Windows\Controls\TreeWithColumnHelper.cs" />
     <Compile Include="Windows\Forms\DockForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Windows\Forms\DockForm.Designer.cs">
       <DependentUpon>DockForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Xtra\Common.cs" />
-    <Compile Include="Xtra\Grid\Common.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Windows\Controls\Control.cs" />
     <Compile Include="Windows\Controls\FolderBrowser.cs">
@@ -273,7 +208,6 @@
     <Compile Include="Windows\Controls\FolderBrowser.Designer.cs">
       <DependentUpon>FolderBrowser.cs</DependentUpon>
     </Compile>
-    <Compile Include="Xtra\TreeList\Common.cs" />
     <Compile Include="Windows\Controls\WizardStep.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -294,12 +228,6 @@
     <Compile Include="Windows\Forms\ImeForm.Designer.cs">
       <DependentUpon>ImeForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Windows\Forms\Wizard.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Windows\Forms\Wizard.Designer.cs">
-      <DependentUpon>Wizard.cs</DependentUpon>
-    </Compile>
     <Compile Include="Windows\Forms\DelayConfirmBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -314,55 +242,21 @@
     </Compile>
     <Compile Include="Windows\Forms\SingletonForms.cs">
     </Compile>
-    <Compile Include="Windows\Forms\WizardDataSet.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Windows\Forms\WizardDataSet.Designer.cs">
-      <DependentUpon>WizardDataSet.cs</DependentUpon>
-    </Compile>
     <Compile Include="Windows\Interfaces\IWizardStep.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="AppSettingsForm.resx">
-      <DependentUpon>AppSettingsForm.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <SubType>Designer</SubType>
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Controls\DataSetDTS\FromDataSet.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>FromDataSet.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Controls\DataSetDTS\ToExcel.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>ToExcel.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Controls\DataSetDTS\ToText.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>ToText.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Controls\DataSetDTS\DTSSelectOut.resx">
-      <DependentUpon>DTSSelectOut.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="Windows\Controls\FolderBrowser.resx">
       <DependentUpon>FolderBrowser.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Controls\Grid\DataSetEditor.resx">
-      <DependentUpon>DataSetEditor.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Windows\Controls\WizardStep.resx">
       <SubType>Designer</SubType>
       <DependentUpon>WizardStep.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Controls\SaveFile.resx">
-      <DependentUpon>SaveFile.cs</DependentUpon>
-      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Windows\Forms\AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
@@ -375,10 +269,6 @@
       <SubType>Designer</SubType>
       <DependentUpon>ImeForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Forms\Wizard.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>Wizard.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Windows\Forms\DelayConfirmBox.resx">
       <SubType>Designer</SubType>
       <DependentUpon>DelayConfirmBox.cs</DependentUpon>
@@ -386,10 +276,6 @@
     <EmbeddedResource Include="Windows\Forms\NotifyIconForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>NotifyIconForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Windows\Forms\WizardDataSet.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>WizardDataSet.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -409,6 +295,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Win.XSD\" />
+    <Folder Include="Windows\Controls\Grid\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -436,6 +323,18 @@ xcopy "%25Reference%25\$(ConfigurationName)\Apq.pdb" "$(ProjectDir)Dlls\" /c /q 
 xcopy "%25Reference%25\$(ConfigurationName)\Apq.WorkFlow.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
 xcopy "%25Reference%25\$(ConfigurationName)\Apq.WorkFlow.xml" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
 xcopy "%25Reference%25\$(ConfigurationName)\Apq.WorkFlow.pdb" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+
+xcopy "%25Reference%25\log4net-1.2.10\log4net.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+xcopy "%25Reference%25\log4net-1.2.10\log4net.xml" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+
+xcopy "%25Reference%25\ICSharpCode\TextEditor_2.2\ICSharpCode.TextEditor.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+xcopy "%25Reference%25\ICSharpCode\TextEditor_2.2\ICSharpCode.TextEditor.xml" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+
+xcopy "%25Reference%25\DockPanel\WeifenLuo.WinFormsUI.Docking.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+
+xcopy "%25Reference%25\TreeWithColumn\$(ConfigurationName)\CommonTools.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+xcopy "%25Reference%25\TreeWithColumn\$(ConfigurationName)\CommonTools.pdb" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+
 :End
 </PreBuildEvent>
     <PostBuildEvent>if "%25Reference%25" == "" goto End
